# karuta

./: .gitignore  .gitmodules  COPYING  Dockerfile  Makefile  Makefile.am  Makefile.gyp  Makefile.in  NEWS  README.md  aclocal.m4  ccrt.h  ccrt_main.cpp  configure  configure.ac  configure.gyp  genparser.py  install-karuta.sh  karuta  karuta_files.py  make_embedded_data.py  missing  nli  nli_files.py  run-file
.github/: FUNDING.yml
docs/: 00INDEX  LRM  LRM.md  MISC  Makefile.am  Makefile.in  conf.py  designandimpl.rst  examples.rst  experimental.rst  extract-document.py  glossary.rst  index.rst  introduction.rst  reference.rst  usersguide.rst
examples/: Makefile.am  Makefile.in  add8c.karuta  add8c.v  axi.karuta  axi.n  div32.karuta  fp16r.karuta  handshake.karuta  handshake.n  iroha.karuta  iroha.n  led.karuta  led.n  mailbox.karuta  mailbox.n  matrix_mult.karuta  md5.karuta  md5.n  mt.karuta  mt.n  mt_ref.cpp  mt_test.karuta  mt_test.n  sha256.karuta  sha256.n  sha256_ref.cpp  tb.n  tb_handshake.v  tb_top.v  top.karuta  top.n  xorshift32.karuta
lib/: Makefile.am  Makefile.in  default-dfg.n  default-iroha.n  default-isynth.karuta  default-isynth.n  default.n  karuta-mode.el  karuta.in  karuta_examples.py  karuta_exit.v  karuta_server.py  karuta_wrapper.py  lib_files.py  make_examples.py  mem16k.v  nli.in  nli_assert.v  nli_examples.py  nli_exit.v  nli_print.v  nli_server.py  nli_wait.v  nli_wrapper.py
lib/example_srcs/: axi_basic.karuta  axi_f1.karuta  bfmachine.karuta  distant_obj.karuta  hello_world.karuta  led_xorshift32.karuta  numeric_fp16.karuta  rpc_xorshift32.karuta  shared_mb.karuta  shared_objs.karuta  xorshift32.karuta
lib/fp/: fp16b.karuta  fp16baddsub.v  fp16bmul.v  fp16r.karuta  fp16raddsub.v  fp16rmul.v
lib/sandbox/: .gitignore  Makefile  karuta.py  setup.py  wrapper.py
lib/vscode/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
snap/: snapcraft.yaml
src/: dump_stream.cpp  dump_stream.h  embedded_data.h  initializer.cpp  initializer.h  karuta.cpp  karuta.gyp  karuta.h  logging.cpp  logging.h  main.cpp  messages.cpp  messages.h  nli.cpp  nli.gyp  nli.h  numeric.cpp  numeric.h  pool.h  status.cpp  status.h  stl_util.h  sym.cpp  sym.h
src/base/: annotation.cpp  annotation.h  annotation_builder.cpp  annotation_builder.h  arg_parser.cpp  arg_parser.h  dump_stream.cpp  dump_stream.h  env.cpp  env.h  initializer.cpp  initializer.h  logging.cpp  logging.h  pool.h  status.cpp  status.h  stl_util.h  sym.cpp  sym.h  util.cpp  util.h
src/compiler/: annotation_checker.cpp  annotation_checker.h  common.h  compiler.cpp  compiler.h  expr_compiler.cpp  expr_compiler.h  loop_marker.cpp  loop_marker.h  method_compiler.cpp  method_compiler.h  reg_checker.cpp  reg_checker.h
src/dfg/: d_graph.cpp  d_graph.h  d_graph_annotation.cpp  d_graph_annotation.h  d_graph_util.cpp  d_graph_util.h  d_insn.cpp  d_insn.h  d_module.cpp  d_module.h  d_resource.cpp  d_resource.h  dfg.cpp  dfg.h  dfg_dump.cpp  dfg_dump.h  dfg_util.cpp  dfg_util.h  imported_resource.cpp  imported_resource.h  resource_params.cpp  resource_params.h
src/fe/: builder.cpp  builder.h  common.cpp  common.h  emitter.h  (+28 more)
tests/: Makefile.am  Makefile.in  QA  axi_tb.v  imported_file.karuta  karuta_test.py  resource.v  run-test  synth_test.py  t91_funcall_width_infer.n  t91_string.n  t91_typeinf.n  test_files.py  test_tb.v  verilator_test.py
tests/fe_error/: infinite_loop.karuta  infinite_loop.n  misc.karuta  misc.n  parse_error.karuta  parse_error.n  tbd.karuta  tbd.n
tests/fe_lang/: decl.karuta  decl.n  for.karuta  for.n  funcall.karuta  funcall.n  if.karuta  if.n  import_file.karuta  import_file.n  load.karuta  pipe.karuta  pipe.n  scope.karuta  scope.n  string.n  while.karuta  while.n
tests/fe_misc/: errors.karuta  misc.karuta  misc.n  parser.karuta  parser.n  tb.karuta  tb.n
tests/fe_obj/: object.karuta  object.n  this_obj.karuta  this_obj.n  thread.karuta  thread.n
tests/fe_typeobj/: basic.karuta
tests/fe_value/: array.karuta  array.n  basic.karuta  basic.n  false.karuta  false.n  numeric.karuta  numeric.n
tests/lib_fp/: fp16b_model.cpp  fp16baddsub.karuta  fp16baddsub_test.v  fp16bmul.karuta  fp16bmul_test.v  fp16r_model.cpp  fp16raddsub_test.v  fp16rmul.karuta  fp16rmul_test.v
tests/synth_axi/: axi_ms_tb.v  interface_only.karuta
tests/synth_error/: no_member_decl.karuta  no_member_decl.n
tests/synth_ext/: ext_entry.karuta  ext_entry.n  ext_entry_tb.v  ext_input_wait.karuta  ext_input_wait_tb.v  ext_io.karuta  ext_io_tb.v  ext_mailbox.karuta  ext_sram.karuta  ext_stub.karuta  ext_stub.n  ext_stub_tb.v  sram_if.karuta  sram_if_tb.v  sram_if_wait.karuta
tests/synth_lang/: cond.karuta  cond.n  funcall.karuta  funcall.n  import_resource.karuta  import_resource.n  mem.karuta  mem.n  member.karuta  member.n  pipe.n  return.karuta  return.n
tests/synth_misc/: null.karuta  null.n  ticker.karuta
tests/synth_obj/: inter_dep.karuta  multi_caller.karuta  multi_caller.n  sub_obj_call.karuta  sub_obj_call.n
tests/synth_regression/: t04_0_0_26.karuta  t04_0_0_26.n  t04_0_0_30.karuta  t04_0_0_30.n  t04_0_0_30_1.karuta  t04_0_0_30_1.n  t04_0_0_30_2.karuta  t04_0_0_30_2.n  t04_0_0_33.karuta  t04_0_0_33.n  t04_0_0_33_1.karuta  t04_0_0_33_1.n  t04_0_0_33_2.karuta  t04_0_0_33_2.n  t04_0_0_33_3.karuta  t04_0_0_33_3.n  t04_0_0_33_4.karuta  t04_0_0_33_4.n  t04_0_0_33_5.karuta  t04_0_0_33_5.n  t04_0_0_33_6.karuta  t04_0_0_33_6.n  t04_0_0_34_1.karuta  t04_0_0_34_1.n  t04_0_0_34_2.karuta  t04_0_0_34_2.n  t04_0_0_35_1.karuta  t04_0_0_35_1.n  t04_0_1_0_0.karuta  t04_0_1_0_0.n  t04_0_1_1_0.karuta  t04_0_1_1_0.n  t04_0_1_9_0.karuta  t04_0_1_9_0.n  t04_0_1_9_1.karuta  t04_0_1_9_1.n
tests/synth_shared/: channel.karuta  channel.n  channel_10w.karuta  channel_rw.karuta  mailbox.karuta  mailbox.n  mailbox_10.karuta  memory.karuta  memory_10.karuta  notify.karuta  notify.n  notify_10.karuta  shared_reg.karuta  shared_reg.n
tests/synth_value/: array_ro.karuta  array_ro.n  array_rw.karuta  array_rw.n  basic.karuta  basic.n  bitops.karuta  bitops.n  false.karuta  false.n  shift.karuta  shift.n
(+218 files in other folders)
